# Jarvy

./: .betterleaksignore  .codespellignore  .gitignore  .gitleaks.toml  .lychee.toml  .markdownlint.json  .mcp.json  .pre-commit-config.yaml  .vale.ini  .yamllint.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.MD  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  Readme.md  SECURITY.md  UPGRADING.md  build.rs  cliff.toml  codecov.yml  deny.toml  jarvy.toml  llms-full.txt  llms.txt  mkdocs.yml  progress.txt  release.toml  renovate.json
.github/: CONTRIBUTING.md  dependabot.yml  release_template.md
.junie/: config.json  guidelines.md
benches/: config_parsing.rs  registry_lookup.rs  version_comparison.rs
crates/cargo-jarvy/: Cargo.toml
crates/cargo-jarvy/src/: main.rs
crates/jarvy-templates/: Cargo.toml
crates/jarvy-templates/src/: lib.rs
docker/: docker-compose.yml
docs/: ConfigurationFile.md  Introduction.md  MAINTAINER_RELEASE_GUIDE.md  MAINTAINER_SECURITY_SETUP.md  Quckstart.md  adding-tools.md  ai-sandboxes.md  architecture.md  cli-reference.md  discover.md  drift.md  e2e-testing-harness.md  error-codes.md  examples.md  for-ai-agents.md  git-config.md  hooks.md  index.md  library-registry.md  logging.md  mcp-registration.md  mcp-server.md  network.md  packages.md  quickstart.md  release-quirks-jarvy.md  release-testing.md  replace-husky.md  robots.txt  self-update.md  skills.md  telemetry.md  templates-index.md  tool-dependencies.md  tools-registry.md  workspace.md
examples/: README.md
fuzz/: Cargo.toml
infra/: README.md
prd/: 021-mcp-server.md  (+47 more)
(+650 files in other folders)
