[package]
name = "jarvy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
inquire = "0.7.5"
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.15"
predicates = "3.1.0"
tracing = "0.1.40"
dirs = "5.0.1"

[dev-dependencies]
tempfile = "3.10.1"
assert_cmd = "2.0.14"
