[package]
name = "jarvy-templates"
version = "0.1.0"
edition = "2024"
description = "Shared tool-scaffold template + validation for jarvy and cargo-jarvy. No runtime deps so dependents stay light."
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
# Intentionally empty — std-only. Keeping this crate dependency-free
# is the whole point: both jarvy (heavy) and cargo-jarvy (tool) can
# depend on it without pulling in each other or the tokio/serde stack.

[lints]
workspace = true
